--- a/finalproject.html
+++ b/finalproject.html
@@ -17,10 +17,10 @@
     <section>
         <h2>Favorite Foods</h2>
         <ul>
-            <li>Pav Bhaji</li>
-            <li>Gulab Jamun</li>
+            <li>Parota/li>
+            <li>kaju barfi</li>
             <li>Chicken</li>
-            <li>Devil's Delight</li>
+            <li>Mojito</li>
         </ul>
     </section>
     <section>
@@ -37,7 +37,7 @@
     <section>
         <h2>More About Me</h2>
         <details>
-            <summary>My Childhood</summary>I grew up in Mumbai.I lived in a small house and I really miss the fun which I had back then.
+            <summary>My Childhood</summary>I grew up in Hyderabad.I had a great childhood and miss my child hood..
         </details>
     </section>
     <footer>
