--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Muhammad Ammar Ansari</h1>
+        <h1>Manogna Madhavapeddi</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
