--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Muhammad Ammar Ansari</h1>
+        <h1>SaiPrabhu Lagisetty</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
@@ -17,8 +17,8 @@
     <section>
         <h2>Favorite Foods</h2>
         <ul>
-            <li>Pav Bhaji</li>
-            <li>Gulab Jamun</li>
+            <li>Noodles</li>
+            <li>Barfi</li>
             <li>Chicken</li>
             <li>Devil's Delight</li>
         </ul>
