--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Manogna Madhavapeddi</h1>
+        <h1>Voore Gauthami</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
@@ -18,7 +18,7 @@
         <h2>Favorite Foods</h2>
         <ul>
             <li>French Fries</li>
-            <li>Ladoo</li>
+            <li>Sununda</li>
             <li>Paneer</li>
             <li>Devil's Delight</li>
         </ul>
@@ -37,7 +37,7 @@
     <section>
         <h2>More About Me</h2>
         <details>
-            <summary>My Childhood</summary>I grew up in Guntur.I lived in a small house and I really miss the fun which I had back then.
+            <summary>My Childhood</summary>I grew up in Nalgonda.I lived in a small house and I really miss the fun which I had back then.
         </details>
     </section>
     <footer>
