--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Voore Gauthami</h1>
+        <h1>Saiprabhu Lagisetty</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
@@ -37,14 +37,12 @@
     <section>
         <h2>More About Me</h2>
         <details>
-            <summary>My Childhood</summary>I grew up in Nalgonda.I lived in a small house and I really miss the fun which I had back then.
+            <summary>My Childhood</summary>I grew up in Hyderabad.I lived in a small house and I really miss the fun which I had back then.
         </details>
     </section>
     <footer>
         <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Web Design For Everyone">
-        This page was created by Ammar &amp; Colleen van Lent.
-        To learn more about web design, visit
-        <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>
+   
     </footer>
 </body>
 </html>
