--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Saiprabhu Lagisetty</h1>
+        <h1>Manogna Madhavapeddi</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
@@ -17,10 +17,10 @@
     <section>
         <h2>Favorite Foods</h2>
         <ul>
-            <li>French Fries</li>
-            <li>Sununda</li>
-            <li>Paneer</li>
-            <li>Devil's Delight</li>
+            <li>Biryani</li>
+            <li>French Fries </li>
+            <li>Panipuri</li>
+            <li>Noodles</li>
         </ul>
     </section>
     <section>
@@ -37,7 +37,7 @@
     <section>
         <h2>More About Me</h2>
         <details>
-            <summary>My Childhood</summary>I grew up in Hyderabad.I lived in a small house and I really miss the fun which I had back then.
+            <summary>My Childhood</summary>I grew up in Hyderabad.I really miss the fun which I had back then in my childhood.
         </details>
     </section>
     <footer>
