--- a/finalproject.html
+++ b/finalproject.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <h1>Manogna Madhavapeddi</h1>
+        <h1>Voore Gauthami</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
@@ -21,6 +21,7 @@
             <li>French Fries </li>
             <li>Panipuri</li>
             <li>Noodles</li>
+            <li>Paneer</li>
         </ul>
     </section>
     <section>
