--- a/finalproject.html
+++ b/finalproject.html
@@ -6,12 +6,11 @@
 </head>
 <body>
     <header>
-        <h1>Muhammad Ammar Ansari</h1>
+        <h1>Sai Charan</h1>
         <nav>
             <a href = "http://www.gmail.com">One</a>
             <a href = "http://www.facebook.com">Two</a>
             <a href = "http://www.google.com">Three</a>
-            <a href = "http://www.github.com/ammaritiz">Github</a><br>
     </nav>
     </header>
     <section>
@@ -42,8 +41,6 @@
     </section>
     <footer>
         <img src="http://www.intro-webdesign.com/images/newlogo.png" alt="Web Design For Everyone">
-        This page was created by Ammar &amp; Colleen van Lent.
-        To learn more about web design, visit
         <a href="http://www.intro-webdesign.com/">Intro to Web Design</a>
     </footer>
 </body>
